apps/argocd-cloud/base/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: argocd-dashboard-basicauth
  namespace: argocd
spec:
  basicAuth:
    secret: argocd-dashboard-1password
